# talktodata

./: .gitignore  QUICKSTART.md  README.md  SETUP_WINDOWS.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  projects.py  queries.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  api_key.py  api_usage.py  conversation.py  memory.py  project.py  query_log.py  user.py
backend/app/schemas/: memory.py  project.py  query.py  user.py
backend/app/services/: query_service.py
backend/app/services/bigquery/: __init__.py  bigquery_service.py
backend/app/services/langchain/: __init__.py
backend/app/services/langchain/chains/: text_to_sql_chain.py
frontend/: README.md  package.json
